@@ -978,7 +978,7 @@ void SpreadsheetView::fillColumnContextMenu(QMenu* menu, Column* column) {
 		action_sort_desc_column->setVisible(true);
 		action_sort_columns->setVisible(false);
 
-		checkColumnMenus(numeric, datetime, hasValues);
+		checkColumnMenus(numeric, datetime, text, hasValues);
 	}
 
 	menu->insertSeparator(firstAction);
@@ -1379,7 +1379,7 @@ bool SpreadsheetView::eventFilter(QObject* watched, QEvent* event) {
 			action_formatting_remove->setVisible(hasFormat);
 
 			if (!m_readOnly)
-				checkColumnMenus(numeric, datetime, hasValues);
+				checkColumnMenus(numeric, datetime, text, hasValues);
 
 			m_columnMenu->exec(global_pos);
 		} else if (watched == this) {
@@ -1526,19 +1526,19 @@ void SpreadsheetView::checkSpreadsheetSelectionMenu() {
 	action_unmask_selection->setEnabled(hasMasked);
 }
 
-void SpreadsheetView::checkColumnMenus(bool numeric, bool datetime, bool hasValues) {
+void SpreadsheetView::checkColumnMenus(bool numeric, bool datetime, bool text, bool hasValues) {
 	// generate data is only possible for numeric columns and if there are cells available
 	const bool hasCells = m_spreadsheet->rowCount() > 0;
 	m_columnGenerateDataMenu->setEnabled(numeric && hasCells);
 
 	// manipulate data is only possible for numeric and datetime and if there values.
 	// datetime has only "add/subtract value", everything else is deactivated
-	m_columnManipulateDataMenu->setEnabled((numeric || datetime) && hasValues);
+	m_columnManipulateDataMenu->setEnabled((numeric || datetime || text) && hasValues);
 	action_multiply_value->setEnabled(numeric);
 	action_divide_value->setEnabled(numeric);
 	action_reverse_columns->setEnabled(numeric);
-	action_drop_values->setEnabled(numeric);
-	action_mask_values->setEnabled(numeric);
+	action_drop_values->setEnabled(numeric || text);
+	action_mask_values->setEnabled(numeric || text);
 	m_columnNormalizeMenu->setEnabled(numeric);
 	m_columnLadderOfPowersMenu->setEnabled(numeric);
 
