@@ -3,7 +3,7 @@
 	Project              : LabPlot
 	Description          : Dialog for droping and masking values in columns
 	--------------------------------------------------------------------
-	SPDX-FileCopyrightText: 2015-2020 Alexander Semke <alexander.semke@web.de>
+	SPDX-FileCopyrightText: 2015-2022 Alexander Semke <alexander.semke@web.de>
 	SPDX-License-Identifier: GPL-2.0-or-later
 */
 
@@ -18,11 +18,13 @@
 #include <QWindow>
 
 #include <KLocalizedString>
+#include <KMessageBox>
 #include <KWindowConfig>
 
 #include <cmath>
 
-enum class Operator { EqualTo, BetweenIncl, BetweenExcl, GreaterThan, GreaterThanEqualTo, LessThan, LessThanEqualTo };
+enum class Operator { EqualTo, NotEqualTo, BetweenIncl, BetweenExcl, GreaterThan, GreaterThanEqualTo, LessThan, LessThanEqualTo };
+enum class OperatorText { EqualTo, NotEqualTo, StartsWith, EndsWith, Contain, NotContain };
 
 /*!
 	\class DropValuesDialog
@@ -34,12 +36,12 @@ DropValuesDialog::DropValuesDialog(Spreadsheet* s, bool mask, QWidget* parent)
 	: QDialog(parent)
 	, m_spreadsheet(s)
 	, m_mask(mask) {
-	setWindowTitle(i18nc("@title:window", "Drop Values"));
 
 	ui.setupUi(this);
 	setAttribute(Qt::WA_DeleteOnClose);
 
 	ui.cbOperator->addItem(i18n("Equal to"));
+	ui.cbOperator->addItem(i18n("Not Equal to"));
 	ui.cbOperator->addItem(i18n("Between (Incl. End Points)"));
 	ui.cbOperator->addItem(i18n("Between (Excl. End Points)"));
 	ui.cbOperator->addItem(i18n("Greater than"));
@@ -47,12 +49,18 @@ DropValuesDialog::DropValuesDialog(Spreadsheet* s, bool mask, QWidget* parent)
 	ui.cbOperator->addItem(i18n("Less than"));
 	ui.cbOperator->addItem(i18n("Less than or Equal to"));
 
+	ui.cbOperatorText->addItem(i18n("Equal To"));
+	ui.cbOperatorText->addItem(i18n("Not Equal To"));
+	ui.cbOperatorText->addItem(i18n("Starts With"));
+	ui.cbOperatorText->addItem(i18n("Ends With"));
+	ui.cbOperatorText->addItem(i18n("Contains"));
+	ui.cbOperatorText->addItem(i18n("Does Not Contain"));
+
 	ui.leValue1->setValidator(new QDoubleValidator(ui.leValue1));
 	ui.leValue2->setValidator(new QDoubleValidator(ui.leValue2));
 
 	auto* btnBox = new QDialogButtonBox(QDialogButtonBox::Ok | QDialogButtonBox::Cancel);
-
-	ui.horizontalLayout->addWidget(btnBox);
+	ui.verticalLayout->addWidget(btnBox);
 	m_okButton = btnBox->button(QDialogButtonBox::Ok);
 
 	connect(btnBox->button(QDialogButtonBox::Cancel), &QPushButton::clicked, this, &DropValuesDialog::close);
@@ -60,11 +68,15 @@ DropValuesDialog::DropValuesDialog(Spreadsheet* s, bool mask, QWidget* parent)
 	if (m_mask) {
 		m_okButton->setText(i18n("&Mask"));
 		m_okButton->setToolTip(i18n("Mask values in the specified region"));
-		ui.lMode->setText(i18n("Mask values"));
+		ui.lNumeric->setText(i18n("Mask Numeric Values"));
+		ui.lText->setText(i18n("Mask Text Values"));
 		setWindowTitle(i18nc("@title:window", "Mask Values"));
 	} else {
 		m_okButton->setText(i18n("&Drop"));
 		m_okButton->setToolTip(i18n("Drop values in the specified region"));
+		ui.lNumeric->setText(i18n("Drop Numeric Values"));
+		ui.lText->setText(i18n("Drop Text Values"));
+		setWindowTitle(i18nc("@title:window", "Drop Values"));
 	}
 
 	connect(ui.cbOperator, QOverload<int>::of(&QComboBox::currentIndexChanged), this, &DropValuesDialog::operatorChanged);
@@ -76,6 +88,7 @@ DropValuesDialog::DropValuesDialog(Spreadsheet* s, bool mask, QWidget* parent)
 	KConfigGroup conf(KSharedConfig::openConfig(), QLatin1String("DropValuesDialog"));
 	ui.cbOperator->setCurrentIndex(conf.readEntry("Operator", 0));
 	operatorChanged(ui.cbOperator->currentIndex());
+	ui.cbOperatorText->setCurrentIndex(conf.readEntry("OperatorText", 0));
 
 	create(); // ensure there's a window created
 	if (conf.exists()) {
@@ -89,15 +102,37 @@ DropValuesDialog::~DropValuesDialog() {
 	// save the current settings
 	KConfigGroup conf(KSharedConfig::openConfig(), QLatin1String("DropValuesDialog"));
 	conf.writeEntry("Operator", ui.cbOperator->currentIndex());
+	conf.writeEntry("OperatorText", ui.cbOperatorText->currentIndex());
 	KWindowConfig::saveWindowSize(windowHandle(), conf);
 }
 
 void DropValuesDialog::setColumns(const QVector<Column*>& columns) {
 	m_columns = columns;
+
+	for (auto* col : m_columns) {
+		if (col->isNumeric()) {
+			m_hasNumeric = true;
+			break;
+		}
+	}
+
+	for (auto* col : m_columns) {
+		if (col->columnMode() == AbstractColumn::ColumnMode::Text) {
+			m_hasText = true;
+			break;
+		}
+	}
+
+	ui.frameNumeric->setVisible(m_hasNumeric);
+	ui.frameText->setVisible(m_hasText);
+
+	// resize the dialog to have the minimum height
+	layout()->activate();
+	resize(QSize(this->width(), 0).expandedTo(minimumSize()));
 }
 
 void DropValuesDialog::operatorChanged(int index) const {
-	bool value2 = (index == 1) || (index == 2);
+	bool value2 = (index == 2) || (index == 3);
 	ui.lMin->setVisible(value2);
 	ui.lMax->setVisible(value2);
 	ui.lAnd->setVisible(value2);
@@ -150,6 +185,30 @@ public:
 			} else if (mode == AbstractColumn::ColumnMode::BigInt) {
 				for (int i = 0; i < rows; ++i) {
 					if (data_bigint->at(i) == m_value1) {
+						m_column->setMasked(i, true);
+						changed = true;
+					}
+				}
+			}
+			break;
+		case Operator::NotEqualTo:
+			if (mode == AbstractColumn::ColumnMode::Double) {
+				for (int i = 0; i < rows; ++i) {
+					if (data->at(i) != m_value1) {
+						m_column->setMasked(i, true);
+						changed = true;
+					}
+				}
+			} else if (mode == AbstractColumn::ColumnMode::Integer) {
+				for (int i = 0; i < rows; ++i) {
+					if (data_int->at(i) != m_value1) {
+						m_column->setMasked(i, true);
+						changed = true;
+					}
+				}
+			} else if (mode == AbstractColumn::ColumnMode::BigInt) {
+				for (int i = 0; i < rows; ++i) {
+					if (data_bigint->at(i) != m_value1) {
 						m_column->setMasked(i, true);
 						changed = true;
 					}
@@ -340,6 +399,14 @@ public:
 					}
 				}
 				break;
+			case Operator::NotEqualTo:
+				for (auto& d : new_data) {
+					if (d != m_value1) {
+						d = NAN;
+						changed = true;
+					}
+				}
+				break;
 			case Operator::BetweenIncl:
 				for (auto& d : new_data) {
 					if (d >= m_value1 && d <= m_value2) {
@@ -399,6 +466,14 @@ public:
 			case Operator::EqualTo:
 				for (auto& d : new_data) {
 					if (d == m_value1) {
+						d = 0;
+						changed = true;
+					}
+				}
+				break;
+			case Operator::NotEqualTo:
+				for (auto& d : new_data) {
+					if (d != m_value1) {
 						d = 0;
 						changed = true;
 					}
@@ -468,6 +543,14 @@ public:
 					}
 				}
 				break;
+			case Operator::NotEqualTo:
+				for (auto& d : new_data) {
+					if (d != m_value1) {
+						d = 0;
+						changed = true;
+					}
+				}
+				break;
 			case Operator::BetweenIncl:
 				for (auto& d : new_data) {
 					if (d >= m_value1 && d <= m_value2) {
@@ -529,35 +612,200 @@ private:
 	Column* m_column;
 };
 
+
+// implementation of tasks for text columns
+class MaskTextValuesTask : public QRunnable {
+public:
+	MaskTextValuesTask(Column* col, OperatorText op, const QString& value) {
+		m_column = col;
+		m_operator = op;
+		m_value = value;
+	}
+
+	void run() override {
+		m_column->setSuppressDataChangedSignal(true);
+		bool changed = false;
+		auto* data = static_cast<QVector<QString>*>(m_column->data());
+		const int rows = m_column->rowCount();
+
+		switch (m_operator) {
+		case OperatorText::EqualTo:
+			for (int i = 0; i < rows; ++i) {
+				if (data->at(i) == m_value) {
+					m_column->setMasked(i, true);
+					changed = true;
+				}
+			}
+			break;
+		case OperatorText::NotEqualTo:
+			for (int i = 0; i < rows; ++i) {
+				if (data->at(i) != m_value) {
+					m_column->setMasked(i, true);
+					changed = true;
+				}
+			}
+			break;
+		case OperatorText::StartsWith:
+			for (int i = 0; i < rows; ++i) {
+				if (data->at(i).startsWith(m_value)) {
+					m_column->setMasked(i, true);
+					changed = true;
+				}
+			}
+			break;
+		case OperatorText::EndsWith:
+			for (int i = 0; i < rows; ++i) {
+				if (data->at(i).endsWith(m_value)) {
+					m_column->setMasked(i, true);
+					changed = true;
+				}
+			}
+			break;
+		case OperatorText::Contain:
+			for (int i = 0; i < rows; ++i) {
+				if (data->at(i).indexOf(m_value) != -1) {
+					m_column->setMasked(i, true);
+					changed = true;
+				}
+			}
+
+			break;
+		case OperatorText::NotContain:
+			for (int i = 0; i < rows; ++i) {
+				if (data->at(i).indexOf(m_value) == -1) {
+					m_column->setMasked(i, true);
+					changed = true;
+				}
+			}
+			break;
+		}
+
+		m_column->setSuppressDataChangedSignal(false);
+		if (changed)
+			m_column->setChanged();
+	}
+
+private:
+	OperatorText m_operator;
+	QString m_value;
+	Column* m_column;
+};
+
+class DropTextValuesTask : public QRunnable {
+public:
+	DropTextValuesTask(Column* col, OperatorText op, const QString& value) {
+		m_column = col;
+		m_operator = op;
+		m_value = value;
+	}
+
+	void run() override {
+		bool changed = false;
+		auto* data = static_cast<QVector<QString>*>(m_column->data());
+		QVector<QString> new_data(*data);
+
+		switch (m_operator) {
+		case OperatorText::EqualTo:
+			for (auto& d : new_data) {
+				if (d == m_value) {
+					d = QString();
+					changed = true;
+				}
+			}
+			break;
+		case OperatorText::NotEqualTo:
+			for (auto& d : new_data) {
+				if (d != m_value) {
+					d = QString();
+					changed = true;
+				}
+			}
+			break;
+		case OperatorText::StartsWith:
+			for (auto& d : new_data) {
+				if (d.startsWith(m_value)) {
+					d = QString();
+					changed = true;
+				}
+			}
+			break;
+		case OperatorText::EndsWith:
+			for (auto& d : new_data) {
+				if (d.endsWith(m_value)) {
+					d = QString();
+					changed = true;
+				}
+			}
+			break;
+		case OperatorText::Contain:
+			for (auto& d : new_data) {
+				if (d.indexOf(m_value) != -1) {
+					d = QString();
+					changed = true;
+				}
+			}
+			break;
+		case OperatorText::NotContain:
+			for (auto& d : new_data) {
+				if (d.indexOf(m_value) == -1) {
+					d = QString();
+					changed = true;
+				}
+			}
+			break;
+		}
+
+		if (changed)
+			m_column->replaceTexts(0, new_data);
+	}
+
+
+private:
+	OperatorText m_operator;
+	QString m_value;
+	Column* m_column;
+};
+
+
 void DropValuesDialog::maskValues() const {
 	Q_ASSERT(m_spreadsheet);
 
-	WAIT_CURSOR;
-	m_spreadsheet->beginMacro(i18n("%1: mask values", m_spreadsheet->name()));
-
+	// settings for numeric columns
 	const auto op = static_cast<Operator>(ui.cbOperator->currentIndex());
 	SET_NUMBER_LOCALE
 	bool ok;
 	const double value1 = numberLocale.toDouble(ui.leValue1->text(), &ok);
-	if (!ok) {
-		DEBUG("Double value 1 invalid!")
-		m_spreadsheet->endMacro();
+	if (!ok && m_hasNumeric) {
+		KMessageBox::error(nullptr, i18n("Invalid value."));
+		ui.leValue1->setFocus();
 		return;
 	}
 
 	const double value2 = numberLocale.toDouble(ui.leValue2->text(), &ok);
 	if (ui.leValue2->isVisible() && !ok) {
-		DEBUG("Double value 2 invalid!")
-		m_spreadsheet->endMacro();
+		KMessageBox::error(nullptr, i18n("Invalid value."));
+		ui.leValue2->setFocus();
 		return;
 	}
 
+	// settings for text columns
+	const auto opText = static_cast<OperatorText>(ui.cbOperatorText->currentIndex());
+	const auto& valueText = ui.leValueText->text();
+
+	WAIT_CURSOR;
+	m_spreadsheet->beginMacro(i18n("%1: mask values", m_spreadsheet->name()));
 	for (auto* col : m_columns) {
-		auto* task = new MaskValuesTask(col, op, value1, value2);
-		task->run();
-		// TODO: writing to the undo-stack in Column::setMasked() is not tread-safe -> redesign
-		// 		QThreadPool::globalInstance()->start(task);
-		delete task;
+		if (col->isNumeric()) {
+			auto* task = new MaskValuesTask(col, op, value1, value2);
+			task->run();
+			// TODO: writing to the undo-stack in Column::setMasked() is not tread-safe -> redesign
+			// 		QThreadPool::globalInstance()->start(task);
+			delete task;
+		} else {
+			auto* task = new MaskTextValuesTask(col, opText, valueText);
+			task->run();
+			delete task;
+		}
 	}
 
 	// wait until all columns were processed
@@ -570,31 +818,38 @@ void DropValuesDialog::maskValues() const {
 void DropValuesDialog::dropValues() const {
 	Q_ASSERT(m_spreadsheet);
 
-	WAIT_CURSOR;
-	m_spreadsheet->beginMacro(i18n("%1: drop values", m_spreadsheet->name()));
-
+	// settings for numeric columns
 	const auto op = static_cast<Operator>(ui.cbOperator->currentIndex());
 	SET_NUMBER_LOCALE
 	bool ok;
 	const double value1 = numberLocale.toDouble(ui.leValue1->text(), &ok);
-	if (!ok) {
-		DEBUG("Double value 1 invalid!")
-		m_spreadsheet->endMacro();
-		RESET_CURSOR;
+	if (!ok && m_hasNumeric) {
+		KMessageBox::error(nullptr, i18n("Invalid value."));
+		ui.leValue1->setFocus();
+		return;
+	}
+	const double value2 = numberLocale.toDouble(ui.leValue2->text(), &ok);
+	if (ui.leValue2->isVisible() && !ok && m_hasNumeric) {
+		KMessageBox::error(nullptr, i18n("Invalid value."));
+		ui.leValue2->setFocus();
 		return;
 	}
 
-	const double value2 = numberLocale.toDouble(ui.leValue2->text(), &ok);
-	if (ui.leValue2->isVisible() && !ok) {
-		DEBUG("Double value 2 invalid!")
-		m_spreadsheet->endMacro();
-		RESET_CURSOR;
-		return;
-	}
+	// settings for text columns
+	const auto opText = static_cast<OperatorText>(ui.cbOperatorText->currentIndex());
+	const auto& valueText = ui.leValueText->text();
+
+	WAIT_CURSOR;
+	m_spreadsheet->beginMacro(i18n("%1: drop values", m_spreadsheet->name()));
 
 	for (auto* col : m_columns) {
-		auto* task = new DropValuesTask(col, op, value1, value2);
-		QThreadPool::globalInstance()->start(task);
+		if (col->isNumeric()) {
+			auto* task = new DropValuesTask(col, op, value1, value2);
+			QThreadPool::globalInstance()->start(task);
+		} else {
+			auto* task = new DropTextValuesTask(col, opText, valueText);
+			QThreadPool::globalInstance()->start(task);
+		}
 	}
 
 	// wait until all columns were processed
